UniTime Dependencies: Log4j updated to 2.17.1 (was 1.2.17)
- CPSolver has been updated as well (CPSolver 1.4)
- using Apache commons logging where possible (LogFactory.getLog(class))
- Log4j is now configured using log4j2.xml (no PropertyConfigurator)
- MessageLogAppender updated to use the new Log4j2 API
- Test HQL page is now using QueryTranslator to get the SQL (instead of a custom appender)
- the change also include a few code cleanups, namely
  - deprecated constructors like new Long(long) changed to Long.valueOf(long)
  - deprecated Class.newInstnace() changed to Class.getDeclaredConstructor().newInstance()