@@ -68,7 +68,7 @@ public class EventNote extends BaseEventNote implements Comparable<EventNote> {
 	public int compareTo(EventNote n) {
 	    int cmp = getTimeStamp().compareTo(n.getTimeStamp());
 	    if (cmp!=0) return cmp;
-	    return (getUniqueId() == null ? new Long(-1) : getUniqueId()).compareTo(n.getUniqueId() == null ? -1 : n.getUniqueId());
+	    return (getUniqueId() == null ? Long.valueOf(-1) : getUniqueId()).compareTo(n.getUniqueId() == null ? -1 : n.getUniqueId());
 	}
 	
 	public void setMeetingCollection(Collection meetings) {
