@@ -74,7 +74,7 @@ public class RoomType extends BaseRoomType implements Comparable<RoomType> {
         if (cmp!=0) return cmp;
         cmp = getLabel().compareTo(t.getLabel());
         if (cmp!=0) return cmp;
-        return (getUniqueId() == null ? new Long(-1) : getUniqueId()).compareTo(t.getUniqueId() == null ? -1 : t.getUniqueId());
+        return (getUniqueId() == null ? Long.valueOf(-1) : getUniqueId()).compareTo(t.getUniqueId() == null ? -1 : t.getUniqueId());
     }
     
     public RoomTypeOption getOption(Department department) {
